[package]
name = "egui-color-picker-oklab"
version = "0.1.0"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/termhn/egui", rev = "b61a4a2", features = ["cint"] }
# egui = { path = "../egui/egui", features = ["cint"] }
colstodian = { git = "https://github.com/termhn/colstodian", rev = "d1d501a" }
# colstodian = { path = "../colstodian" }
cint = "^0.2.1"
